--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.0",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
